# DoomDiffusion

./: .gitignore  CHAT.md  README.md  checkpoint.pth  clean_data.py  extract_data.py  image_dataset.py  model.py  pyproject.toml  sample.py  train.py
src/: sample.py  train.py
src/libs/: config.py  sampler.py  trainer.py
src/libs/models/: simple_unet.py
src/libs/schedules/: cosine_beta.py  schedule.py
